--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # Application
 transaction.approval.threshold=1000
 #Runs every 24 hours at midnight
-#scheduling.cron.process-transactions=0 0 0 * * *
-scheduling.cron.process-transactions=0 18 16 * * ?
+scheduling.cron.process-transactions=0 0 0 * * *
 
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
